# wps

./: BUILD.md  CHECKLIST.md  CMakeLists.txt  CMakeUserPresets.json  DELIVERY_CHECKLIST.md  FINAL_SUMMARY.md  PROJECT_REPORT.md  QUICKSTART.md  README.md  README_ZH.txt  START_HERE.md  vcpkg.json  wps.slnx
src/: main.cpp
src/ai/: ai_writer.cpp  ai_writer.h  llm_client.cpp  llm_client.h  prompt_manager.cpp  prompt_manager.h  xunfei_client.cpp
src/core/: document.cpp  document.h  parser.cpp  parser.h
src/gui/: ai_sidebar.cpp  ai_sidebar.h  editor_widget.cpp  editor_widget.h  image_editor_dialog.cpp  image_editor_dialog.h  image_widget.cpp  image_widget.h  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt
tests/ai_tests/: test_llm_client.cpp
tests/core_tests/: test_document.cpp
wps/: wps.vcxproj
